# mgba

./: CMakeLists.txt  cmake_gen_dingoo.sh  make_opk.sh
src/platform/sdl_legacy/: CMakeLists.txt  DingooToolchain.txt  main.c  sdl_legacy.c  sdl_legacy.h
src/util/vfs/: vfs-fd.c
